Fix tooltip wrapping bug

--- a/style.css
+++ b/style.css
@@ -583,6 +583,7 @@ a .tooltip {
   font-weight: 500;
   text-shadow: none;
   text-transform: uppercase;
+  white-space: nowrap;
   background-color: rgba(0, 0, 0, 0.96);
   border-radius: 4px;
   padding: 4px 6px 4px 6px;
